# ai-memory-system

./: .gitignore  BOOTSTRAP.md  CONTRIBUTING.md  DECISIONS.md  README.md  UPGRADE_PLAN.md  public-repo-artifacts.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CRON_JOBS.md  LEARNER.md  PHASE2-MULTI-TENANCY.md  PHASE2-SCHEMA-PROPOSAL.md  RLM.md  SUBMINDS.md
examples/: README.md
examples/personal/: README.md
examples/research/: README.md
examples/software-engineering/: README.md  sample-adr-042-worktrees.md
examples/trading/: README.md
phase1-starters/: ARCHITECTURE-honest-overview.md
scripts/: cli.py  hybrid_memory_search.py  neo4j_backfill_assistant.py  neo4j_seed.py  neo4j_sync.py
scripts/rlm/: README.md  memory_state.py  metadata.py  neo4j_learn_sync.py  neo4j_traverse.py
templates/: AGENTS.md  HEARTBEAT.md  INDEX.qmd  MEMORY.md  SOUL.md  TOOLS.md  USER.md
templates/core/: identity.qmd  people.qmd  preferences.qmd  setup.qmd
tests/: __init__.py  test_cli_smoke.py
